Fix flexbox issues on Firefox

--- a/_includes/css/components/button.css
+++ b/_includes/css/components/button.css
@@ -11,6 +11,7 @@
   gap: 0.5rem;
   justify-self: flex-start;
   transition: all 0.15s ease-out;
+  inline-size: fit-content;
 }
 
 .button[data-type="secondary"] {
