--- a/_includes/css/components/resource-detail.css
+++ b/_includes/css/components/resource-detail.css
@@ -7,7 +7,10 @@
 }
 
 .resource-detail .l-wrapper {
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .resource-detail .page-topics {
